binutils/trunk: comment out dependency reported as sururplus

--- a/csw/mgar/pkg/binutils/trunk/Makefile
+++ b/csw/mgar/pkg/binutils/trunk/Makefile
@@ -51,7 +51,7 @@ GARCOMPILER = GNU
 RUNTIME_DEP_PKGS_CSWbinutils += CSWlibiconv2
 RUNTIME_DEP_PKGS_CSWbinutils += CSWlibintl8
 RUNTIME_DEP_PKGS_CSWbinutils += CSWlibz1
-RUNTIME_DEP_PKGS_CSWbinutils-i386 += CSWlibfl2
+#RUNTIME_DEP_PKGS_CSWbinutils-i386 += CSWlibfl2
 RUNTIME_DEP_PKGS_CSWbinutils += $(RUNTIME_DEP_PKGS_CSWbinutils-$(GARCH))
 
 CHECKPKG_OVERRIDES_CSWbinutils += file-with-bad-content
