binutils/trunk: cleaner way to set grep, suggested by Dago

--- a/csw/mgar/pkg/binutils/trunk/Makefile
+++ b/csw/mgar/pkg/binutils/trunk/Makefile
@@ -23,8 +23,10 @@ PACKAGING_PLATFORMS += solaris10-sparc solaris10-i386
 
 # EXTRA_CPPFLAGS += -features=extensions -D__FUNCTION__=__func__
 
-GREP=ggrep
-EXTRA_EXPORTS=GREP
+# We need GNU grep
+EXTRA_CONFIGURE_EXPORTS += GREP
+CONFIGURE_ENV_GREP = /opt/csw/bin/ggrep
+
 
 CONFIGURE_ARGS += --program-prefix=g
 # http://sourceware.org/bugzilla/show_bug.cgi?id=12265
@@ -64,8 +66,6 @@ CHECKPKG_OVERRIDES_CSWbinutils += file-collision|/opt/csw/share/locale/it/LC_MES
 
 include gar/category.mk
 
-# We need GNU grep 
-PATH := /opt/csw/gnu:$(PATH)
 
 post-install-modulated:
 	@# Every package carries his own links in /opt/csw/gnu
