apache24/trunk: readd checkpkg overrides

--- a/csw/mgar/pkg/apache24/trunk/Makefile
+++ b/csw/mgar/pkg/apache24/trunk/Makefile
@@ -48,7 +48,7 @@ RUNTIME_DEP_PKGS_CSWapache24 += CSWlighttpd
 EXTRA_MERGE_DIRS_isa-extra += /etc/opt/csw/64/apache2/extra
 
 # This is because /opt/csw/sbin/sparcv9 is missing, most certainly an checkpkg issue
-CHECKPKG_OVERRIDES_CSWapache24 += missing-dependency|CSWbonnie++|or|CSWcollectd|or|CSWleafnode|or|CSWlighttpd|or|CSWlogrotate|or|CSWopenldap|or|CSWproftpd|or|CSWsysstat|or|CSWzabbix-agent|or|CSWzabbix-server
+# CHECKPKG_OVERRIDES_CSWapache24 += missing-dependency|CSWbonnie++|or|CSWcollectd|or|CSWleafnode|or|CSWlighttpd|or|CSWlogrotate|or|CSWopenldap|or|CSWproftpd|or|CSWsysstat|or|CSWzabbix-agent|or|CSWzabbix-server
 
 PACKAGES += CSWapache24-manual
 ARCHALL_CSWapache24-manual = 1
