gcc4/branches/gcc-4.6.x: disable cloog which depends on obsolete library, update mpc dependency

--- a/csw/mgar/pkg/gcc4/branches/gcc-4.6.x/Makefile
+++ b/csw/mgar/pkg/gcc4/branches/gcc-4.6.x/Makefile
@@ -2,7 +2,6 @@
 
 NAME      = gcc
 VERSION   = 4.6.3
-CATEGORIES   = lang
 GARTYPE = v2
 BASE_VERSION = $(shell echo $(VERSION) | gsed -e 's/^\([0-9]\+\.[0-9]\+\)\(.*\)/\1/')
 PKG_VERSION_TOKEN = gcc4
@@ -38,7 +37,7 @@ BUILD_DEP_PKGS += CSWlibgmp-dev
 BUILD_DEP_PKGS += CSWlibmpc-dev
 BUILD_DEP_PKGS += CSWlibmpfr-dev
 BUILD_DEP_PKGS += CSWlibppl-dev
-BUILD_DEP_PKGS += CSWcloog-dev
+#BUILD_DEP_PKGS += CSWcloog-dev
 
 # Could be used to break out of the /opt/csw/$(PKG_VERSION_TOKEN) prefix
 PROGRAM_SUFFIX = -$(BASE_VERSION)
@@ -59,8 +58,8 @@ CONFIGURE_ARGS += --with-x
 CONFIGURE_ARGS += --with-mpfr=$(BUILD_PREFIX)
 CONFIGURE_ARGS += --with-gmp=$(BUILD_PREFIX)
 CONFIGURE_ARGS += --with-ppl=$(BUILD_PREFIX)
-CONFIGURE_ARGS += --with-cloog=$(BUILD_PREFIX)
-CONFIGURE_ARGS += --enable-cloog-backend=isl
+#CONFIGURE_ARGS += --with-cloog=$(BUILD_PREFIX)
+#CONFIGURE_ARGS += --enable-cloog-backend=isl
 CONFIGURE_ARGS += --enable-java-awt=xlib
 CONFIGURE_ARGS += --enable-libada
 CONFIGURE_ARGS += --enable-libssp
@@ -117,7 +116,7 @@ ALTERNATIVES_PRIO = 460
 PACKAGES = $(PKG_BASENAME)core
 SPKG_DESC_$(PKG_BASENAME)core = GNU C compiler
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlib-gnu-awt-xlib$(JAVA_LIB_VERSION)
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibcloog-isl2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibcloog-isl2
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibffi4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibgcc-s1
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibgcj$(JAVA_LIB_VERSION)
@@ -126,8 +125,8 @@ RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibgij$(JAVA_LIB_VERSION)
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibgmp10
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibgmpxx4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibgomp1
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibisl7
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibmpc2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibisl7
+RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibmpc3
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibmpfr4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibppl-c4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)core += CSWlibppl9
@@ -312,11 +311,11 @@ PKGFILES_$(PKG_BASENAME)g++ += $(mandir)/.*g\+\+.1
 # I do not understand this regular expression.
 PKGFILES_$(PKG_BASENAME)g++ += $(includedir)/c\+\+/(\d+(?:\.\d+)*)/[a-fA-F,h-iH-I,k-nI-N,p-zP-Z,]+.*
 PKGFILES_$(PKG_BASENAME)g++ += $(includedir)/c\+\+/(\d+(?:\.\d+)*)/ostream.*
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibcloog-isl2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibcloog-isl2
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibgmp10
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibgmpxx4
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibisl7
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibmpc2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibisl7
+RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibmpc3
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibmpfr4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibppl-c4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)g++ += CSWlibppl9
@@ -343,12 +342,12 @@ PKGFILES_$(PKG_BASENAME)gfortran += $(libexecdir)/.*f951
 PKGFILES_$(PKG_BASENAME)gfortran += $(mandir)/.*gfortran.1
 PKGFILES_$(PKG_BASENAME)gfortran += $(infodir)/gfortran.*
 PKGFILES_$(PKG_BASENAME)gfortran += $(call baseisadirs,$(libdir),libgfortran\.so)
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibcloog-isl2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibcloog-isl2
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibgfortran3
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibgmp10
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibgmpxx4
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibisl7
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibmpc2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibisl7
+RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibmpc3
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibmpfr4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibppl-c4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)gfortran += CSWlibppl9
@@ -363,15 +362,15 @@ ALTERNATIVE_gfortran += $(bindir)/gfortran gcc_gfortran $(bindir)/gfortran$(PROG
 
 PACKAGES += $(PKG_BASENAME)java
 SPKG_DESC_$(PKG_BASENAME)java       = GNU Java Compiler
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibcloog-isl2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibcloog-isl2
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibgcc-s1
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibgcj$(JAVA_LIB_VERSION)
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibgcj-tools$(JAVA_LIB_VERSION)
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibgij$(JAVA_LIB_VERSION)
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibgmp10
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibgmpxx4
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibisl7
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibmpc2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibisl7
+RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibmpc3
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibmpfr4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibppl-c4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)java += CSWlibppl9
@@ -449,11 +448,11 @@ PKGFILES_$(PKG_BASENAME)objc += $(includedir)/.*objc/.*
 PKGFILES_$(PKG_BASENAME)objc += $(libdir)/.*/include/objc/.*
 PKGFILES_$(PKG_BASENAME)objc += $(call baseisadirs,$(libdir),libobjc.so)
 PKGFILES_$(PKG_BASENAME)objc += $(call baseisadirs,$(libdir),libobjc_gc.so)
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibcloog-isl2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibcloog-isl2
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibgmp10
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibgmpxx4
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibisl7
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibmpc2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibisl7
+RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibmpc3
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibmpfr4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibobjc-gc3
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)objc += CSWlibobjc3
@@ -491,12 +490,12 @@ RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibppl-c4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibz1
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibmpfr4
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibpwl5
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibmpc2
+RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibmpc3
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibgmpxx4
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibisl7
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibisl7
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibgcc-s1
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibgmp10
-RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibcloog-isl2
+#RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibcloog-isl2
 RUNTIME_DEP_PKGS_$(PKG_BASENAME)ada += CSWlibppl9
 
 # This is an obsolete package. Nothing depends on it, so we can remove it.
